# qdiagnostic

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
qdiagnostic/: Makefile  Makefile.am  config.h  config.status  configure  configure.ac  libtool
qdiagnostic/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
qdiagnostic/po/: Makefile  Makefile.in
qdiagnostic/src/: Makefile  Makefile.am  Makefile.in  clean_up_child_process.c  common.h  diskfree.c  error.c  errors.h  format_process_info.c  get_group_name.c  get_program_name.c  get_rss.c  get_self_executable_directory.c  get_uid_gid.c  get_user_name.c  handle_connection.c  handle_get.c  issue.c  itostr.c  main.c  merge_str.c  messages.h  module.c  module.h  number_places.c  paths.h  print_usage.c  process_usage.c  processes.c  qdiagnostic-0.1.pc  qdiagnostic-0.1.pc.in  server.c  server.h  system_error.c  time.c  usage.h  verbose_message.c  xmalloc.c  xrealloc.c  xstrdup.c
qdiagnostic/src/.deps/: clean_up_child_process.Po  diskfree.Po  error.Po  format_process_info.Po  get_group_name.Po  get_program_name.Po  get_rss.Po  get_self_executable_directory.Po  get_uid_gid.Po  get_user_name.Po  handle_connection.Po  handle_get.Po  issue.Po  itostr.Po  main.Po  merge_str.Po  module.Po  number_places.Po  print_usage.Po  process_usage.Po  processes.Po  server.Po  system_error.Po  time.Po  usage.Po  verbose_message.Po  xmalloc.Po  xrealloc.Po  xstrdup.Po
